[gd_scene load_steps=11 format=3 uid="uid://dhm8ww2fqxfua"]

[ext_resource type="Script" uid="uid://c4d3iwmln8sl4" path="res://ui/hud/Hud.gd" id="1_1x8ju"]
[ext_resource type="Theme" uid="uid://g22p2j6a23ol" path="res://ui/theme/HUDTheme.tres" id="2_aaqae"]
[ext_resource type="PackedScene" uid="uid://bawx4mokse2am" path="res://ui/hud/CardProgress.tscn" id="3_4sqfl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aaqae"]
content_margin_left = 25.0
bg_color = Color(0.10965204, 0.10965204, 0.10965204, 1)
corner_radius_bottom_right = 30
expand_margin_right = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4sqfl"]
content_margin_top = 5.0
content_margin_right = 25.0
content_margin_bottom = 5.0
bg_color = Color(0.10965204, 0.10965204, 0.10965204, 1)
corner_radius_bottom_left = 30
expand_margin_left = 25.0
expand_margin_right = 100.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jd13s"]
content_margin_right = 25.0
bg_color = Color(0.10965204, 0.10965204, 0.10965204, 1)
corner_radius_bottom_left = 30
expand_margin_left = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxbmk"]
bg_color = Color(0.10965204, 0.10965204, 0.10965204, 1)
draw_center = false
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4sqfl"]
content_margin_top = 4.0
content_margin_bottom = 10.0

[sub_resource type="Gradient" id="Gradient_ks410"]
offsets = PackedFloat32Array(0.32325888, 0.34954008, 0.7003942, 0.7358739)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_epdrl"]
gradient = SubResource("Gradient_ks410")
width = 50
height = 50
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -988.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_aaqae")
script = ExtResource("1_1x8ju")

[node name="TopLeft" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 91.0
offset_bottom = 65.0
size_flags_horizontal = 3
theme = ExtResource("2_aaqae")
theme_override_styles/panel = SubResource("StyleBoxFlat_aaqae")

[node name="Balance" type="Button" parent="TopLeft"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("2_aaqae")
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "0000
"

[node name="ClockPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -246.21997
offset_right = -207.21997
offset_bottom = 29.0
grow_horizontal = 0
theme = ExtResource("2_aaqae")
theme_override_styles/panel = SubResource("StyleBoxFlat_4sqfl")

[node name="Clock" type="Label" parent="ClockPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("2_aaqae")
theme_override_colors/font_color = Color(0.26239687, 0.26239687, 0.26239687, 1)
theme_override_font_sizes/font_size = 24
text = "0"

[node name="TopRight" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -83.0
offset_bottom = 60.0
grow_horizontal = 0
theme = ExtResource("2_aaqae")
theme_override_styles/panel = SubResource("StyleBoxFlat_jd13s")

[node name="Spawned" type="Button" parent="TopRight"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("2_aaqae")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "0"

[node name="Center" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.5
offset_right = 41.5
offset_bottom = 65.0
grow_horizontal = 2
theme = ExtResource("2_aaqae")
theme_override_styles/panel = SubResource("StyleBoxFlat_wxbmk")

[node name="MarginContainer" type="MarginContainer" parent="Center"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Center/MarginContainer"]
layout_mode = 2

[node name="CardProgress" parent="Center/MarginContainer/VBoxContainer" instance=ExtResource("3_4sqfl")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_4sqfl")

[node name="ShieldPoints" type="HBoxContainer" parent="Center/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="BasePoints" type="HBoxContainer" parent="Center/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="EnemySpeed" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -78.0
offset_top = 80.0
offset_right = -28.0
offset_bottom = 130.0
grow_horizontal = 0
min_value = 1.0
max_value = 5.0
step = 0.5
value = 1.0
fill_mode = 4
texture_progress = SubResource("GradientTexture2D_epdrl")
tint_progress = Color(1, 0, 0, 1)
